--- a/docs/report/portada.tex
+++ b/docs/report/portada.tex
@@ -1,49 +1,31 @@
-\begin{titlepage} \thispagestyle{empty}
-    	\fbox{\begin{minipage}[c][0.99\textheight][t]{0.95\columnwidth}
-    		\vspace{1cm}
-    		\begin{center}
-    			\includegraphics[width=2cm]{escudo_uned}
-    			\par
-    		\end{center}
-    		\bigskip{}
-    		\begin{singlespace}
-    			\begin{center}
-    				{\large{}UNIVERSIDAD NACIONAL DE EDUCACIÓN A DISTANCIA}
-    				\vspace{0.7cm}
-    				\par
-    				{\large{}ESCUELA TÉCNICA SUPERIOR DE INGENIERÍA INFORMÁTICA}
-    				\vspace{0.5cm}
-    				\par
-    				Proyecto de Fin de Grado en Ingeniería Informática {\Large{}\vspace{0.8cm}}
-    				\par
-    			\end{center}
-    			{\Large \par}
-    		\end{singlespace}
-    		
-    		\begin{center}
-    			\textbf{\Large{}DESARROLLO DE UNA APLICACIÓN}\\
-    			\textbf{\Large{}WEB DE COMERCIO ELECTRÓNICO}\\
-    			\par
-    		\end{center}
-    		{\Large \par}
-    		\vfill{}
-    		\begin{flushleft}
-    			\qquad{}MISRRAIM SUÁREZ PÉREZ \bigskip{}
-    			\par
-    		\end{flushleft}
-    		\begin{flushleft}
-    			\qquad{}Dirigido por: LUIS GRAU FERNÁNDEZ
-    			\par
-    		\end{flushleft}
-    		\begin{flushleft}
-    			\vspace{1.5cm}
-    			\par
-    		\end{flushleft}
-    		\begin{flushleft}
-    			\qquad{}Curso: 2019-2020 (Septiembre)
-    			\par
-    		\end{flushleft}
-    		\bigskip{}
-    	\end{minipage}}
-    	
-    \end{titlepage}
+\begin{titlepage}
+	\thispagestyle{empty}
+	\fbox{
+		\begin{minipage}[c][0.99\textheight][t]{\columnwidth}
+			\begin{center}
+				\vspace{1cm}
+				\includegraphics[width=2cm]{escudo_uned}
+				\vspace{2cm}
+				\begin{singlespace}
+					UNIVERSIDAD NACIONAL DE EDUCACIÓN A DISTANCIA\\
+					\vspace{0.5cm}
+					ESCUELA TÉCNICA SUPERIOR DE INGENIERÍA INFORMÁTICA\\
+					\vspace{1cm}
+					Proyecto de Fin de Grado en Ingeniería Informática\\
+					\vspace{2cm}
+					\textbf{\large FIRSTMARKET: APLICACIÓN WEB}\\
+					\textbf{\large DE COMERCIO ELECTRÓNICO}
+				\end{singlespace}
+			\end{center}
+			\begin{flushleft}
+				\vspace{4cm}
+				\quad MISRRAIM SUÁREZ PÉREZ\\
+				\vspace{0.5cm}
+				\quad Dirigido por: LUIS GRAU FERNÁNDEZ
+				\vfill
+				\quad Curso: 2019-2020 (Septiembre)
+				\vspace{0.5cm}
+			\end{flushleft}
+		\end{minipage}
+	}
+\end{titlepage}
