--- a/docs/report/portada.tex
+++ b/docs/report/portada.tex
@@ -1,6 +1,7 @@
 \begin{titlepage}
 	\thispagestyle{empty}
 	\fbox{
+		\thispagestyle{empty}
 		\begin{minipage}[c][0.99\textheight][t]{\columnwidth}
 			\begin{center}
 				\vspace{1cm}
@@ -19,7 +20,7 @@
 			\end{center}
 			\begin{flushleft}
 				\vspace{4cm}
-				\quad MISRRAIM SUÁREZ PÉREZ\\
+				\quad \theauthor\\
 				\vspace{0.5cm}
 				\quad Dirigido por: LUIS GRAU FERNÁNDEZ
 				\vfill
